--- a/themes/fluid/layout/layout.ejs
+++ b/themes/fluid/layout/layout.ejs
@@ -5,7 +5,7 @@ var colorSchema = theme.dark_mode && theme.dark_mode.enable && theme.dark_mode.d
 
 <!DOCTYPE html>
 <html lang="<%= config.language %>" <%= colorSchema ? `data-default-color-scheme=${colorSchema}` : '' %>>
-
+<meta name="google-site-verification" content="JOEjmReuzvP2lwN4vUaLh16a-ecBajiiT67VS-9HXqU" />
 <%- partial('_partials/head.ejs') %>
 
 <body>
