--- a/themes/fluid/layout/_partials/head.ejs
+++ b/themes/fluid/layout/_partials/head.ejs
@@ -46,4 +46,5 @@ var ogConfig = Object.assign({ image: ogImage && url_for(ogImage) }, theme.open_
   <%- partial('_partials/plugins/analytics.ejs') %>
 
   <%- inject_point('head') %>
+  <meta name="google-site-verification" content="JOEjmReuzvP2lwN4vUaLh16a-ecBajiiT67VS-9HXqU" />
 </head>
